--- a/home.html
+++ b/home.html
@@ -181,9 +181,8 @@ ul {
 
   /* Style the custom label */
   .custom-file-label {
-    display: inline-block;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #000800;
     color: white;
     border-radius: 5px;
     cursor: pointer;
