--- a/home.html
+++ b/home.html
@@ -181,8 +181,9 @@ ul {
 
   /* Style the custom label */
   .custom-file-label {
+	display: block;
     padding: 10px 20px;
-    background-color: #000800;
+    background-color: #008000;
     color: white;
     border-radius: 5px;
     cursor: pointer;
