--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@ ul {
             display: block;
         }
         input, select, textarea {
-            margin: 10px 0;
+            margin: 0px 0px 20px;
             padding: 8px;
             width: 100%;
             max-width: 300px;
