--- a/home.html
+++ b/home.html
@@ -158,7 +158,7 @@ ul {
         }
         input, select, textarea {
             margin: 0px 0px 20px;
-            padding: 8px;
+            padding: 10px;
             width: 100%;
             max-width: 300px;
         }
@@ -182,6 +182,7 @@ ul {
   /* Style the custom label */
   .custom-file-label {
 	display: block;
+	margin-bottom: 20px;
     padding: 10px 20px;
     background-color: #008000;
     color: white;
