--- a/home.html
+++ b/home.html
@@ -158,9 +158,10 @@ ul {
         }
         input, select, textarea {
             margin: 0px 0px 20px;
-            padding: 10px;
+            padding: 8px;
             width: 100%;
             max-width: 300px;
+			height: 40px;
         }
 	  button {
             padding: 10px 20px;
