--- a/home.html
+++ b/home.html
@@ -281,7 +281,7 @@ blockquote {
 		 <label for="name">Residential Address</label>
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
 		 
-		 <label for="passport" class="custom-file-label">Take A Picture</label>
+		 <label for="passport" class="custom-file-label">Take A Selfie</label>
 		 <input type="file" id="passport" accept="image/*" capture="user">
 		 
 		 <button type="submit" id="button">SUMBIT</button>
