--- a/home.html
+++ b/home.html
@@ -162,6 +162,7 @@ ul {
             width: 100%;
             max-width: 300px;
 			height: 25px;
+			font-size: 14px;
         }
 	  button {
             padding: 10px 20px;
