--- a/home.html
+++ b/home.html
@@ -166,7 +166,7 @@ ul {
         }
 	  button {
             padding: 10px 20px;
-            background: #007bff;
+            background: #008000;
             color: white;
             border: none;
             border-radius: 4px;
@@ -186,8 +186,7 @@ ul {
 	display: block;
 	margin-bottom: 20px;
     padding: 10px 20px;
-    background-color: #008000;
-    color: white;
+	border: 1px solid #ddd; 
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
