--- a/home.html
+++ b/home.html
@@ -163,6 +163,7 @@ ul {
             max-width: 300px;
 			height: 25px;
 			font-size: 14px;
+			outline: none;
         }
 	  button {
             padding: 10px 20px;
