--- a/home.html
+++ b/home.html
@@ -285,7 +285,7 @@ blockquote {
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
 		 
 		 <label for="passport" class="custom-file-label">Take A Selfie</label>
-		 <input type="file" id="passport" accept="image/*" capture="user">
+		 <input type="file" id="passport" accept="image/*" capture="user" required>
 		 
 		 <button type="submit" id="submitBtn1">SUMBIT</button>
 	 </form>
