--- a/home.html
+++ b/home.html
@@ -273,7 +273,7 @@ blockquote {
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
 		 
 		 <label for="email">Email</label>
-		 <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+		 <input type="email" id="email" name="email" autocomplete="email" placeholder="Your Email Address" required>
 		 
 		 <label for="phone">Phone</label>
 		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
