--- a/home.html
+++ b/home.html
@@ -276,13 +276,13 @@ blockquote {
 		 <input type="email" id="email" name="email" autocomplete="email" placeholder="Your Email Address" required>
 		 
 		 <label for="phone">Phone</label>
-		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
+		 <input type="tel" id="phone" name="phone" placeholder="Your Phone Number" required>
 		 
-		 <label for="name">State/Province</label>
-		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
+		 <label for="state">State/Province</label>
+		 <input type="text" id="state" name="state" placeholder="Subject here" >
 		 
-		 <label for="name">Residential Address</label>
-		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
+		 <label for="address">Residential Address</label>
+		 <input type="text" id="address" name="address" placeholder="Your residentail Adress">
 		 
 		 <label for="passport" class="custom-file-label">Take A Selfie</label>
 		 <input type="file" id="passport" accept="image/*" capture="user" required>
@@ -314,18 +314,14 @@ blockquote {
 		<!-- Form three -->
 		<div id="form3" class="form-container">
      <form id="thirdForm" method="post">
-		 <label for="name">Name</label>
-		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
-		 <label for="email">Email</label>
-		 <input type="email" id="email" name="to" placeholder="Your Email Address" required>
-		 <label for="phone">Phone</label>
-		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
-		 <label for="name">State/Province</label>
-		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
-		 <label for="name">Residential Address</label>
-		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
-		 <label for="passport">Passport</label>
-		 <input type="file" id="passport" accept="image/*" capture="user">
+		 <label for="bankName">Bank Name</label>
+		 <input type="text" id="bankName" name="bankName" placeholder="Your Bank Name" required>
+		 
+		 <label for="accountNumber">Your Account Number</label>
+		 <input type="tel" id="accountNumber" name="accountNumber" placeholder="Your Account Number" required>
+		 
+		 <label for="accountName">Your Account Name</label>
+		 <input type="text" id="accountName" name="accountName" placeholder="Your Account Name" required>
 		 
 		 <button type="submit" id="submitBtn3">SUMBIT</button>
 	 </form>
