--- a/home.html
+++ b/home.html
@@ -271,6 +271,16 @@ blockquote {
      <form id="firstForm" method="post">
 		 <label for="name">Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+
+		 <label for="gender">Gender</label>
+		 <select id="gender" name="gender">
+			 <option value="Male">Male</option>
+			 <option value="Female">Female</option>
+			 <option value="Rather">I'd rather not say</option>
+		 </select>
+		 
+		 <label for="dob">Date Of Birth</label>
+		 <input type="date" id="dob" name="dob" placeholder="Your Date of Birth" required>
 		 
 		 <label for="email">Email</label>
 		 <input type="email" id="email" name="email" autocomplete="email" placeholder="Your Email Address" required>
