--- a/home.html
+++ b/home.html
@@ -181,6 +181,15 @@ ul {
   input[type="file"] {
     display: none;
   }
+	  
+input[type="date"] {
+    width: 100%; 
+	height: 25px;
+    padding: 8px; 
+    font-size: 14px;
+    border: 1px solid #000;
+    border-radius: 5px; 
+  }
 
   /* Style the custom label */
   .custom-file-label {
