--- a/home.html
+++ b/home.html
@@ -184,9 +184,9 @@ ul {
 	  
 input[type="date"] {
     width: 100%; 
-	height: 25px;
+	background-color: transparent;
     padding: 8px; 
-    font-size: 14px;
+    font-size: 16px;
     border: 1px solid #000;
     border-radius: 5px; 
   }
