--- a/home.html
+++ b/home.html
@@ -185,6 +185,7 @@ ul {
 input[type="date"] {
     width: 100%; 
 	background-color: transparent;
+	color: #000;
     padding: 8px; 
     font-size: 16px;
     border: 1px solid #000;
