--- a/home.html
+++ b/home.html
@@ -184,6 +184,7 @@ ul {
 	  
 input[type="date"] {
     width: 100%; 
+	height: 25px;
 	background-color: transparent;
 	color: #000;
     padding: 8px; 
