--- a/home.html
+++ b/home.html
@@ -156,7 +156,7 @@ ul {
         .active {
             display: block;
         }
-        input, select, textarea {
+        input, textarea {
             margin: 0px 0px 20px;
             padding: 8px;
             width: 100%;
@@ -192,6 +192,17 @@ input[type="date"] {
     border: 1px solid #000;
     border-radius: 5px; 
   }
+	select {
+	width: 100%; 
+	height: 25px;
+	background-color: transparent;
+	color: #000;
+    padding: 8px; 
+    font-size: 16px;
+    border: 1px solid #000;
+    border-radius: 5px; 
+		  
+	}
 
   /* Style the custom label */
   .custom-file-label {
