--- a/home.html
+++ b/home.html
@@ -183,6 +183,7 @@ ul {
   }
 	  
 input[type="date"] {
+	margin: 0px 0px 20px;
     width: 100%; 
 	height: 25px;
 	background-color: transparent;
@@ -193,6 +194,7 @@ input[type="date"] {
     border-radius: 5px; 
   }
 	select {
+	margin: 0px 0px 20px;
 	width: 100%; 
 	height: 25px;
 	background-color: transparent;
