--- a/home.html
+++ b/home.html
@@ -156,8 +156,10 @@ ul {
         .active {
             display: block;
         }
-        input, textarea {
+        input, select, textarea {
             margin: 0px 0px 20px;
+			background-color: transparent;
+			color: #000;
             padding: 8px;
             width: 100%;
             max-width: 300px;
@@ -193,18 +195,6 @@ input[type="date"] {
     border: 1px solid #000;
     border-radius: 5px; 
   }
-	select {
-	margin: 0px 0px 20px;
-	width: 100%; 
-	height: 25px;
-	background-color: transparent;
-	color: #000;
-    padding: 8px; 
-    font-size: 16px;
-    border: 1px solid #000;
-    border-radius: 5px; 
-		  
-	}
 
   /* Style the custom label */
   .custom-file-label {
