--- a/home.html
+++ b/home.html
@@ -196,6 +196,12 @@ input[type="date"] {
     border-radius: 5px; 
   }
 
+.firstForm select {
+	appearance: none;
+	border: 1px solid #000;
+}
+	  
+
   /* Style the custom label */
   .custom-file-label {
 	display: block;
@@ -283,6 +289,7 @@ blockquote {
 		<!-- Form one -->
 		<div id="form1" class="form-container active">
      <form id="firstForm" method="post">
+		 
 		 <label for="name">Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
 
