--- a/home.html
+++ b/home.html
@@ -192,13 +192,13 @@ input[type="date"] {
 	color: #000;
     padding: 8px; 
     font-size: 16px;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     border-radius: 5px; 
   }
 
-.firstForm select {
+#firstForm select {
 	appearance: none;
-	border: 1px solid #000;
+	border: 1px solid #ccc;
 }
 	  
 
