--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@ ul {
             width: 100%;
             max-width: 300px;
 			height: 25px;
-			font-size: 14px;
+			font-size: 16px;
 			outline: none;
         }
 	  button {
@@ -197,6 +197,8 @@ input[type="date"] {
   }
 
 #firstForm select {
+	font-size: 16px;
+	padding: 8px;
 	appearance: none;
 	border: 1px solid #ccc;
 }
