--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@ ul {
             margin: 0px 0px 20px;
 			background-color: transparent;
 			color: #000;
-            padding: 8px;
+			padding: 8px;
             width: 100%;
             max-width: 300px;
 			height: 25px;
@@ -199,7 +199,6 @@ input[type="date"] {
 #firstForm select {
 	font-size: 16px;
 	padding: 8px;
-	appearance: none;
 }
 	  
 
@@ -291,7 +290,7 @@ blockquote {
 		<div id="form1" class="form-container active">
      <form id="firstForm" method="post">
 		 
-		 <label for="name">Name</label>
+		 <label for="name">Full Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
 
 		 <label for="gender">Gender</label>
