--- a/home.html
+++ b/home.html
@@ -174,6 +174,7 @@ ul {
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            width: 100%;
         }
         button:disabled {
             background: #ccc;
