--- a/home.html
+++ b/home.html
@@ -175,6 +175,7 @@ ul {
             border-radius: 4px;
             cursor: pointer;
             width: 100%;
+            margin: auto;
         }
         button:disabled {
             background: #ccc;
