--- a/home.html
+++ b/home.html
@@ -167,7 +167,7 @@ ul {
 			font-size: 16px;
 			outline: none;
         }
-	  button {
+	  .featured button {
             padding: 10px 20px;
             background: #008000;
             color: white;
