--- a/home.html
+++ b/home.html
@@ -176,6 +176,7 @@ ul {
             cursor: pointer;
             width: 100%;
             margin: auto;
+            font-size: 16px;
         }
         button:disabled {
             background: #ccc;
@@ -208,7 +209,7 @@ input[type="date"] {
   .custom-file-label {
 	display: block;
 	margin-bottom: 20px;
-    padding: 10px 20px;
+    padding: 5px 20px;
 	border: 1px solid #ddd; 
     border-radius: 5px;
     cursor: pointer;
