--- a/home.html
+++ b/home.html
@@ -343,7 +343,7 @@ blockquote {
 		 <input type="text" id="state" name="state" placeholder="Subject here" >
 		 
 		 <label for="address">Residential Address</label>
-		 <input type="text" id="address" name="address" placeholder="Your residentail Adress"> for="email">Email</label>
+		 <input type="text" id="address" name="address" placeholder="Your residentail Adress">
 		 
 		 <label for="nin">NIN</label>
 		 <input type="text" id="nin" name="nin" placeholder="Subject here" >
