--- a/home.html
+++ b/home.html
@@ -178,7 +178,7 @@ ul {
             margin: auto;
             font-size: 16px;
         }
-        button:disabled {
+        .featured button:disabled {
             background: #ccc;
             cursor: not-allowed;
         }
