--- a/home.html
+++ b/home.html
@@ -167,18 +167,15 @@ ul {
 			font-size: 16px;
 			outline: none;
         }
-	  .featured button {
+	  button {
             padding: 10px 20px;
             background: #008000;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            width: 100%;
-            margin: auto;
-            font-size: 16px;
         }
-        .featured button:disabled {
+	  button:disabled {
             background: #ccc;
             cursor: not-allowed;
         }
