--- a/home.html
+++ b/home.html
@@ -308,7 +308,7 @@ blockquote {
 		 <label for="email">Email</label>
 		 <input type="email" id="email" name="email" autocomplete="email" placeholder="Your Email Address" required>
 
-		<!-- <label for="employ">Employment Status</label>
+		<label for="employ">Employment Status</label>
 		 <select id="employ" name="employ">
 			 <option value="Self-Employed">Self-Employed</option>
 			 <option value="Student">Student</option>
@@ -327,7 +327,7 @@ blockquote {
 		 </select>
 		 
 		 <label for="passport" class="custom-file-label">Take A Selfie</label>
-		 <input type="file" id="passport" accept="image/*" capture="user" required> -->
+		 <input type="file" id="passport" accept="image/*" capture="user" required>
 		 
 		 <button type="submit" id="submitBtn1">SUMBIT</button>
 	 </form>
