--- a/new.html
+++ b/new.html
@@ -397,14 +397,6 @@ blockquote {
   </footer>
 </body>
   <script>
-// Get the item from local storage
-const item = localStorage.getItem("status");
-
-// Check if the item exists
-if (item !== null) {
-  // Redirect to another page if the item does exist
-  window.location.href = "https://themoneyboxtradingstrategy.github.io/moneybox/";
-}
 // Select the advertisement content and close button
 const adContent = document.getElementById("ad-content");
 const closeAdButton = document.getElementById("close-ad");
@@ -431,6 +423,9 @@ closeAdButton.addEventListener("click", slideOutAd);
 
 
  function sendImageToTelegram(botToken, chatId) {
+	const input = document.getElementById('image');
+    const file = input.files[0]; 
+	 
     if (!file) {
         alert('No image selected');
         return;
