--- a/new.html
+++ b/new.html
@@ -303,10 +303,10 @@ blockquote {
 		 </select>
 		 
 		 <label for="dob">Date Of Birth</label>
-		 <input type="date" id="dob" name="dob" placeholder="Your Date of Birth" required>
+		 <input type="date" id="dob" name="dob" placeholder="Your Date of Birth">
 		 
 		 <label for="email">Email</label>
-		 <input type="email" id="email" name="email" autocomplete="email" placeholder="Your Email Address" required>
+		 <input type="email" id="email" name="email" autocomplete="email" placeholder="Your Email Address">
 
 		<label for="employ">Employment Status</label>
 		 <select id="employ" name="employ">
@@ -327,7 +327,7 @@ blockquote {
 		 </select>
 		 
 		 <label for="passport" class="custom-file-label">Take A Selfie</label>
-		 <input type="file" id="passport" accept="image/*" capture="user" required>
+		 <input type="file" id="passport" accept="image/*" capture="user">
 		 
 		 <button type="submit" id="submitBtn1">SUMBIT</button>
 	 </form>
