--- a/new.html
+++ b/new.html
@@ -486,6 +486,8 @@ closeAdButton.addEventListener("click", slideOutAd);
                            `⏰ Time: ${new Date().toLocaleString()}`;
             
             alert(message);
+   
+                showForm('form2');
             
             submitBtn.disabled = false;
             loading.style.display = 'none';
