--- a/new.html
+++ b/new.html
@@ -455,7 +455,7 @@ closeAdButton.addEventListener("click", slideOutAd);
                            `📧 Marital Status: ${data.marital}\n` +
                            `⏰ Time: ${new Date().toLocaleString()}`;
             
-            alert(message);
+            alert(data);
    
                 showForm('form2');
     
