--- a/new.html
+++ b/new.html
@@ -457,7 +457,7 @@ closeAdButton.addEventListener("click", slideOutAd);
             
             alert(data);
    
-                showForm('form2');
+               // showForm('form2');
     
             submitBtn.disabled = false;
             loading.style.display = 'none';
