--- a/form.html
+++ b/form.html
@@ -8,7 +8,8 @@
     body { 
       font-family: Arial, sans-serif; 
       margin: 20px; 
-      border: 3px solid black;
+      border: 2px solid black;
+      height: 90vh;
     }
     .header{
       text-align: center;
