--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
       margin: 20px; 
       border: 2px solid black;
       height: 90vh;
+      box-sizing: border-box;
     }
     .header{
       text-align: center;
