--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     body { 
       font-family: Arial, sans-serif; 
       margin: 20px; 
-      border-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
       height: 90vh;
       box-sizing: border-box;
     }
