--- a/form.html
+++ b/form.html
@@ -8,12 +8,14 @@
     body { 
       font-family: Arial, sans-serif; 
       margin: 20px; 
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-      height: 90vh;
       box-sizing: border-box;
+      color: #f2f2f3;
     }
     .header{
       text-align: center;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      height: 90vh;
+      
     }
   </style>
 </head>
