--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif; 
       margin: 20px; 
       box-sizing: border-box;
-      color: #f2f2f3;
+      background-color: #f2f2f3;
     }
     .header{
       text-align: center;
