--- a/form.html
+++ b/form.html
@@ -11,17 +11,21 @@
       box-sizing: border-box;
       background-color: #f2f2f3;
     }
-    .header{
+    .container{
       text-align: center;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
       height: 90vh;
-      
+      padding: 30px 20px 10px;
+    }
+    .header{
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h3>Header</h3>
+  <div class="container">
+    <div class="header">
+      <h3>Header</h3>
+    </div>
   </div>
 </body>
 </html>
