--- a/form.html
+++ b/form.html
@@ -16,6 +16,7 @@
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
       height: 90vh;
       padding: 30px 20px 10px;
+      background: #fff;
     }
     .header{
     }
