--- a/form.html
+++ b/form.html
@@ -20,12 +20,23 @@
     }
     .header{
     }
+    .headFlex{
+      display: flex;
+    }
+    .headFlex img{
+      text-align: left;
+      width: 40px;
+      height: 40ox;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h3>Header</h3>
+      <div class="headFlex">
+        <h3>Header</h3>
+        <img src="design.png" alt="selfie">
+      </div>
     </div>
   </div>
 </body>
