--- a/form.html
+++ b/form.html
@@ -23,9 +23,9 @@
     .headFlex{
       display: flex;
       align-items: center;
+      justify-content: space-between;
     }
     .headFlex img{
-      text-align: left;
       width: 40px;
       height: 40ox;
     }
