--- a/form.html
+++ b/form.html
@@ -25,9 +25,13 @@
       align-items: center;
       justify-content: space-between;
     }
+    .headFlex h3{
+      text-align: center;
+    }
     .headFlex img{
-      width: 40px;
-      height: 40ox;
+      width: 50px;
+      height: 50px;
+      margin-right: auto;
     }
   </style>
 </head>
