--- a/form.html
+++ b/form.html
@@ -24,6 +24,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      border: 1px solid red;
     }
     .headFlex h3{
       text-align: center;
@@ -32,6 +33,7 @@
       width: 50px;
       height: 50px;
       margin-right: auto;
+      border: 2px solid green;
     }
   </style>
 </head>
