--- a/form.html
+++ b/form.html
@@ -23,6 +23,7 @@
     .headFlex{
       display: flex;
       align-items: center;
+      text-align: center;
       justify-content: space-between;
       border: 1px solid red;
     }
