--- a/form.html
+++ b/form.html
@@ -36,11 +36,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="header">
-      <div class="headFlex">
+    <div class="headFlex">
+      <div class="head">
         <h3>Header</h3>
-        <img src="design.png" alt="selfie">
       </div>
+      <img src="design.png" alt="selfie">
     </div>
   </div>
 </body>
