--- a/form.html
+++ b/form.html
@@ -23,7 +23,6 @@
     .headFlex{
       display: flex;
       align-items: center;
-      text-align: center;
       justify-content: space-between;
       border: 1px solid red;
     }
@@ -31,6 +30,10 @@
       width: 50px;
       height: 50px;
       border: 2px solid green;
+    }
+    .head{
+      border: 2px solid blue;
+      text-align: center;
     }
   </style>
 </head>
