--- a/form.html
+++ b/form.html
@@ -20,17 +20,17 @@
     }
     .header{
     }
-    .headFlex{
+    .head{
       display: flex;
       align-items: center;
       border: 1px solid red;
     }
-    .headFlex img{
+    .head img{
       width: 50px;
       height: 50px;
       border: 2px solid green;
     }
-    .head{
+    .title{
       border: 2px solid blue;
       text-align: center;
     }
@@ -40,9 +40,9 @@
   <div class="container">
     <div class="headFlex">
       <div class="head">
-        <h3>Header</h3>
+        <h3 class="title">Header</h3>
+        <img src="design.png" alt="selfie">
       </div>
-      <img src="design.png" alt="selfie">
     </div>
   </div>
 </body>
