--- a/form.html
+++ b/form.html
@@ -24,6 +24,7 @@
       display: flex;
       align-items: center;
       border: 1px solid red;
+      justify-content: space-between;
     }
     .head img{
       width: 50px;
@@ -32,6 +33,7 @@
     }
     .title{
       border: 2px solid blue;
+      flex: 1
       text-align: center;
     }
   </style>
