--- a/form.html
+++ b/form.html
@@ -25,26 +25,27 @@
       align-items: center;
       border: 1px solid red;
       justify-content: space-between;
+      position: relative;
     }
     .head img{
+      position: absolute;
+      left: 0;
       width: 50px;
       height: 50px;
       border: 2px solid green;
-    }
-    .title{
-      border: 2px solid blue;
-      flex: 1;
-      text-align: center;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="headFlex">
-      <div class="head">
-        <h3 class="title">Header</h3>
+    <div class="head">
+      <div class="headFlex">
+        <h3>Header</h3>
         <img src="design.png" alt="selfie">
       </div>
+    </div>
+    <div class="body">
+      
     </div>
   </div>
 </body>
