--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
       left: 0;
       width: 50px;
       height: 50px;
-      border: 2px solid green;
+      border: 2px solid grey;
     }
   </style>
 </head>
