--- a/form.html
+++ b/form.html
@@ -29,11 +29,12 @@
     }
     .head img{
       position: absolute;
-      left: 0;
+      right: 0;
       width: 50px;
       height: 50px;
       border: 2px solid grey;
     }
+    
   </style>
 </head>
 <body>
