--- a/form.html
+++ b/form.html
@@ -34,7 +34,9 @@
       height: 50px;
       border: 2px solid grey;
     }
-    
+    .header h3{
+      text-align: right;
+    }
   </style>
 </head>
 <body>
