--- a/form.html
+++ b/form.html
@@ -22,7 +22,6 @@
     }
     .head{
       display: flex;
-      align-items: center;
       border: 1px solid red;
       position: relative;
     }
@@ -32,8 +31,8 @@
       width: 50px;
       height: 50px;
     }
-    .header h3{
-      text-align: right;
+    .head h3{
+      text-align: center;
     }
   </style>
 </head>
