--- a/form.html
+++ b/form.html
@@ -30,6 +30,7 @@
       right: 0;
       width: 50px;
       height: 50px;
+      border: 1px solid yellow;
     }
     .head h3{
       text-align: center;
