--- a/form.html
+++ b/form.html
@@ -21,9 +21,11 @@
     .header{
     }
     .head{
-      display: flex;
-      border: 1px solid red;
-      position: relative;
+      display: grid;
+      grid-template-columns: auto 1fr; 
+      align-items: center; 
+      justify-content: center; 
+      position: relative; 
     }
     .head img{
       position: absolute;
