--- a/form.html
+++ b/form.html
@@ -19,19 +19,14 @@
       background-color: #fff;
     }
     .head{
-      display: grid;
-      grid-template-columns: auto 1fr; 
-      align-items: center; 
-      justify-content: center; 
-      position: relative; 
+      display: flex;
+      align-items: center;
     }
     .head img{
-      position: absolute;
-      right: 0;
+      width: 50px;
+      height: 50px;
     }
-    .head h3{
-      text-align: center;
-    }
+
   </style>
 </head>
 <body>
