--- a/form.html
+++ b/form.html
@@ -21,10 +21,13 @@
     .head{
       display: flex;
       align-items: center;
+      position: relative;
     }
     .head img{
       width: 50px;
       height: 50px;
+      position: absolute;
+      right: 0;
     }
 
   </style>
