--- a/form.html
+++ b/form.html
@@ -29,13 +29,15 @@
       position: absolute;
       right: 0;
     }
-
+    .title{
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="head">
-        <h3>Header</h3>
+        <h3 class="title">Header</h3>
         <img src="design.png" alt="selfie">
     </div>
     <div class="body">
