--- a/form.html
+++ b/form.html
@@ -29,8 +29,10 @@
       position: absolute;
       right: 0;
     }
-    .title{
+    .head h3{
       text-align: center;
+      border: 1px solid red;
+      width: 50%;
     }
   </style>
 </head>
