--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@
 <body>
   <div class="container">
     <div class="head">
-        <h3 class="title">NIGERIAN GOVERNMENT GRANT</h3>
+        <h3 class="title">THE NIGERIA FEDERAL GOVERNMENT GRANT</h3>
         <img src="design.png" alt="selfie">
     </div>
     <div class="body">
