--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
       width: 50px;
       height: 50px;
       position: absolute;
-      right: 0;
+      left: 0;
     }
     .head h3{
       text-align: center;
@@ -40,8 +40,8 @@
 <body>
   <div class="container">
     <div class="head">
-        <h3 class="title">THE NIGERIA FEDERAL GOVERNMENT GRANT</h3>
-        <img src="design.png" alt="selfie">
+      <img src="design.png" alt="selfie">
+      <h3 class="title">THE NIGERIA FEDERAL GOVERNMENT GRANT</h3>
     </div>
     <div class="body">
       
