--- a/form.html
+++ b/form.html
@@ -31,7 +31,6 @@
     }
     .head h3{
       text-align: center;
-      border: 1px solid red;
       width: 70%;
       margin: auto;
     }
@@ -40,8 +39,9 @@
 <body>
   <div class="container">
     <div class="head">
-      <img src="design.png" alt="selfie">
+      <img src="design.png" alt="gov">
       <h3 class="title">THE NIGERIA FEDERAL GOVERNMENT GRANT</h3>
+      <img src="design.png" alt="selfie">
     </div>
     <div class="body">
       
