--- a/form.html
+++ b/form.html
@@ -41,8 +41,8 @@
     <div class="head">
       <img src="design.png" alt="gov">
       <h3 class="title">THE NIGERIA FEDERAL GOVERNMENT GRANT</h3>
-      <img src="design.png" alt="selfie">
     </div>
+      <img src="design.png" alt="gov">
     <div class="body">
       
     </div>
