--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
     }
     .head h3{
       text-align: center;
-      width: 70%;
+      width: 80%;
       margin: auto;
     }
   </style>
@@ -40,7 +40,7 @@
   <div class="container">
     <div class="head">
       <img src="design.png" alt="gov">
-      <h3 class="title">THE NIGERIA FEDERAL GOVERNMENT GRANT</h3>
+      <h3 class="title">NIGERIAN FEDERAL GOVERNMENT GRANT</h3>
     </div>
       <img src="design.png" alt="gov">
     <div class="body">
