--- a/form.html
+++ b/form.html
@@ -34,6 +34,15 @@
       width: 80%;
       margin: auto;
     }
+    .selfie{
+      position: relative;
+      border: 1px solid blue;
+    }
+    .selfie img{
+      width: 60px;
+      position: absolute;
+      right: 0;
+    }
   </style>
 </head>
 <body>
@@ -42,7 +51,9 @@
       <img src="design.png" alt="gov">
       <h3 class="title">NIGERIAN FEDERAL GOVERNMENT GRANT</h3>
     </div>
+    <div class="selfie">
       <img src="design.png" alt="gov">
+    </div>
     <div class="body">
       
     </div>
