--- a/form.html
+++ b/form.html
@@ -52,7 +52,7 @@
       <h3 class="title">NIGERIAN FEDERAL GOVERNMENT GRANT</h3>
     </div>
     <div class="selfie">
-      <img src="design.png" alt="gov">
+      <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
       
