--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
       width: 60px;
       position: absolute;
       right: 0;
-      top: 50%;
+      top: 30px;
     }
   </style>
 </head>
@@ -53,6 +53,7 @@
       <h3 class="title">NIGERIAN FEDERAL GOVERNMENT GRANT</h3>
     </div>
     <div class="selfie">
+      <h3>APPROVAL FORM</h3>
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
