--- a/form.html
+++ b/form.html
@@ -34,15 +34,15 @@
       width: 80%;
       margin: auto;
     }
-    .selfie{
+    .nav{
       position: relative;
       border: 1px solid blue;
     }
-    .selfie img{
+    .nav img{
       width: 60px;
       position: absolute;
       right: 0;
-      top: 30px;
+      top: -30px;
     }
   </style>
 </head>
@@ -52,8 +52,8 @@
       <img src="design.png" alt="gov">
       <h3 class="title">NIGERIAN FEDERAL GOVERNMENT GRANT</h3>
     </div>
-    <div class="selfie">
-      <h3>APPROVAL FORM</h3>
+    <div class="nav">
+      <h5>APPROVAL FORM</h5>
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
