--- a/form.html
+++ b/form.html
@@ -49,7 +49,7 @@
   <div class="container">
     <div class="head">
       <img src="design.png" alt="gov">
-      <h3 class="title">NIGERIAN FEDERAL GOVERNMENT GRANT</h3>
+      <h3 class="title">FEDERAL GOVERNMENT OF NIGERIA GRANT</h3>
     </div>
     <div class="nav">
       <h4>APPROVAL FORM</h4>
