--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@
     .nav img{
       width: 70px;
       position: absolute;
-      right: 0;
+      right: -5px;
       top: -30px;
     }
   </style>
