--- a/form.html
+++ b/form.html
@@ -40,8 +40,8 @@
     .nav img{
       width: 70px;
       position: absolute;
-      right: -5px;
-      top: -25px;
+      right: 0;
+      top: -35px;
     }
   </style>
 </head>
