--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
       width: 50px;
       height: 50px;
       position: absolute;
-      left: 0;
+      left: -5px;
     }
     .head h3{
       text-align: center;
