--- a/form.html
+++ b/form.html
@@ -43,6 +43,14 @@
       right: 0;
       top: -30px;
     }
+    .end{
+    }
+    .end img{
+      width: 50px;
+    }
+    .end{
+      font-family: 'Alex Brush';
+    }
   </style>
 </head>
 <body>
@@ -57,6 +65,10 @@
     </div>
     <div class="body">
       
+    </div>
+    <div class="end">
+      <img src="stamp.jpeg" alt="stamp">
+      <h4>Alexb</h4>
     </div>
   </div>
 </body>
