--- a/form.html
+++ b/form.html
@@ -43,6 +43,9 @@
       right: 0;
       top: -30px;
     }
+    .body{
+      margin: 30px 0px 20px;
+    }
     .end{
     }
     .end img{
@@ -64,7 +67,7 @@
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
-      
+      <p>This Form is </p>
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
