--- a/form.html
+++ b/form.html
@@ -47,6 +47,8 @@
       margin: 30px 0px 20px;
     }
     .end{
+      display: flex;
+      position: relative;
     }
     .end img{
       width: 50px;
