--- a/form.html
+++ b/form.html
@@ -46,6 +46,9 @@
     .body{
       margin: 50px 0px 20px;
     }
+    .body p{
+      text-align: left;
+    }
     .end{
       display: flex;
       position: relative;
