--- a/form.html
+++ b/form.html
@@ -46,6 +46,7 @@
     .body{
       margin: 70px 0px 20px;
       padding: 10px;
+      border: 2px solid #000;
     }
     .body p{
       text-align: left;
