--- a/form.html
+++ b/form.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form</title>
+  <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
   <style>
     body { 
       font-family: Arial, sans-serif; 
@@ -60,8 +61,8 @@
       width: 50px;
       height: 50px;
     }
-    .end{
-      font-family: 'Alex Brush';
+    .end h4{
+      font-family: 'Alex Brush', cursive;
     }
   </style>
 </head>
