--- a/form.html
+++ b/form.html
@@ -40,10 +40,9 @@
     }
     .nav img{
       width: 80px;
-      height: 80px;
       position: absolute;
-      right: 0;
-      top: -25px;
+      right: 5px;
+      top: -15px;
     }
     .body{
       margin: 70px 0px 20px;
