--- a/form.html
+++ b/form.html
@@ -73,7 +73,7 @@
       <h3 class="title">FEDERAL GOVERNMENT OF NIGERIA GRANT</h3>
     </div>
     <div class="nav">
-      <h4>APPROVAL FORM</h4>
+      <h4>GRANT APPROVED</h4>
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
