--- a/form.html
+++ b/form.html
@@ -77,7 +77,7 @@
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
-      <p>This Form is </p>
+      <p>This Form is confirms that the grant release application submitted by the grantee below has been officially approved.</p>
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
