--- a/form.html
+++ b/form.html
@@ -53,6 +53,15 @@
       text-align: left;
       font-size: 12px;
     }
+    .body h6{
+    }
+    .body input{
+      outline: none;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      text-align: center;
+    }
     .end{
       display: flex;
       position: relative;
@@ -78,6 +87,7 @@
     </div>
     <div class="body">
       <p>This Form is confirms that the grant release application submitted by the grantee below has been officially approved.</p>
+      <h6>Grantee's Name:</h6><input type="text">
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
