--- a/form.html
+++ b/form.html
@@ -60,6 +60,7 @@
       border-top: none;
       border-left: none;
       border-right: none;
+      border-bottom: 1px dotted #000;
       text-align: center;
     }
     .end{
