--- a/form.html
+++ b/form.html
@@ -60,7 +60,8 @@
       border-top: none;
       border-left: none;
       border-right: none;
-      border-bottom: 1px dotted #000;
+      border-bottom: 2px dotted #000;
+      border-radius: none;
       text-align: center;
     }
     .end{
