--- a/form.html
+++ b/form.html
@@ -61,7 +61,7 @@
       border-left: none;
       border-right: none;
       border-bottom: 2px dotted #000;
-      border-radius: none;
+      border-radius: 0;
       text-align: center;
     }
     .end{
