--- a/form.html
+++ b/form.html
@@ -54,6 +54,8 @@
       font-size: 12px;
     }
     .body h6{
+      display: inline-block;
+      font-size: 14px;
     }
     .body input{
       outline: none;
