--- a/form.html
+++ b/form.html
@@ -91,7 +91,8 @@
     </div>
     <div class="body">
       <p>This Form is confirms that the grant release application submitted by the grantee below has been officially approved.</p>
-      <h6>Grantee's Name:</h6><input type="text">
+      <h6>Grantee's Name:</h6><input type="text"><h6>Grantee's Date of Birth:</h6><input type="text"><h6>Grantee's Gender:</h6><input type="text">
+      <h6>Grantee's Employment Status:</h6><input type="text"><h6>Grantee's Address:</h6><input type="text"><h6>Grantee's NIN:</h6><input type="text">
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
