--- a/form.html
+++ b/form.html
@@ -56,6 +56,7 @@
     .body h6{
       display: inline-block;
       font-size: 14px;
+      margin: 5px;
     }
     .body input{
       outline: none;
