--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
       font-size: 12px;
     }
     .body h6{
-      display: inline-block;
+      display: flex;
       font-size: 14px;
       margin: 5px;
     }
