--- a/form.html
+++ b/form.html
@@ -59,6 +59,7 @@
       margin: 5px;
     }
     .body input{
+      display: flex;
       outline: none;
       border-top: none;
       border-left: none;
