--- a/form.html
+++ b/form.html
@@ -103,7 +103,7 @@
   </div>
 </body>
   <script>
-  const input = document.getElementByClassName("Input");
+  const input = document.getElementByClassNames("Input");
 
 input.forEach(type => {    
   type.addEventListener("input", () => {
