--- a/form.html
+++ b/form.html
@@ -67,6 +67,7 @@
       border-bottom: 2px dotted #000;
       border-radius: 0;
       text-align: center;
+      font-size: 14px;
     }
     .end{
       display: flex;
@@ -93,7 +94,7 @@
     </div>
     <div class="body">
       <p>This Form is confirms that the grant release application submitted by the grantee below has been officially approved.</p>
-      <h6>Grantee's Name:</h6><input type="text" class="Input" placeholder="name"><h6>Grantee's Date of Birth:</h6><input type="text" class="Input"><h6>Grantee's Gender:</h6><input type="text" class="Input">
+      <h6>Grantee's Name:</h6><input type="text" class="Input"><h6>Grantee's Date of Birth:</h6><input type="text" class="Input"><h6>Grantee's Gender:</h6><input type="text" class="Input">
       <h6>Grantee's Employment Status:</h6><input type="text" class="Input"><h6>Grantee's Address:</h6><input type="text" class="Input"><h6>Grantee's NIN:</h6><input type="text" class="Input">
     </div>
     <div class="end">
