--- a/form.html
+++ b/form.html
@@ -96,7 +96,7 @@
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
-      <p>This Form is confirms that the grant release application submitted by the grantee below has been officially approved.</p>
+      <p>This form confirms that the grant release application submitted by the grantee below has been officially approved.</p>
       <div class="form">
         <h6>Grantee's Name:</h6><input type="text" class="Input"><h6>Grantee's Date of Birth:</h6><input type="text" class="Input"><h6>Grantee's Gender:</h6><input type="text" class="Input">
         <h6>Grantee's Employment Status:</h6><input type="text" class="Input"><h6>Grantee's Address:</h6><input type="text" class="Input"><h6>Grantee's NIN:</h6><input type="text" class="Input">
