--- a/form.html
+++ b/form.html
@@ -56,7 +56,7 @@
     .form{
       display: flex;
       align-items: center;
-      width: 100%;
+      width: 80px;
     }
     .form h6{
       font-size: 14px;
