--- a/form.html
+++ b/form.html
@@ -54,13 +54,14 @@
       font-size: 12px;
     }
     .form{
-      display: flex;
+      border: 1px solid blue;
       align-items: center;
       width: 80px;
     }
     .form h6{
       font-size: 14px;
       margin: 5px;
+      border: 1px solid red;
     }
     .form input{
       outline: none;
