--- a/form.html
+++ b/form.html
@@ -56,7 +56,8 @@
     .form{
       border: 1px solid blue;
       align-items: center;
-      width: 80px;
+      width: 100%;
+      
     }
     .form h6{
       font-size: 14px;
