--- a/form.html
+++ b/form.html
@@ -57,7 +57,7 @@
       border: 1px solid blue;
       align-items: center;
       width: 100%;
-      
+      display: flex;
     }
     .form h6{
       font-size: 14px;
@@ -113,7 +113,7 @@
   <script>
   const input = document.querySelectorAll("Input");
 
-input.forEach(type => {    
+// input.forEach(type => {    
   type.addEventListener("input", () => {
     // Create a temporary span to measure the text width
     const tempSpan = document.createElement("span");
