--- a/form.html
+++ b/form.html
@@ -72,6 +72,7 @@
       border-radius: 0;
       font-size: 14px;
       flex-shrink: 1;
+      max-width: 100%;
     }
     .end{
       display: flex;
