--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
       font-size: 12px;
     }
     .form{
-      border: 1px solid red;
+      border: 1px solid blue;
       align-items: center;
       width: 100%;
       display: flex;
@@ -64,6 +64,7 @@
       margin: 5px;
     }
     .form input{
+      display: inline;
       outline: none;
       border-top: none;
       border-left: none;
@@ -71,8 +72,6 @@
       border-bottom: 2px dotted #000;
       border-radius: 0;
       font-size: 14px;
-      flex-shrink: 1;
-      max-width: 100%;
     }
     .end{
       display: flex;
