--- a/form.html
+++ b/form.html
@@ -64,7 +64,7 @@
       margin: 5px;
     }
     .form input{
-      display: inline;
+      display: flex;
       outline: none;
       border-top: none;
       border-left: none;
