--- a/form.html
+++ b/form.html
@@ -62,6 +62,7 @@
       font-size: 14px;
       margin: 5px;
       font-weight: bold;
+      display: inline-block;
     }
     .form input{
       outline: none;
