--- a/form.html
+++ b/form.html
@@ -71,6 +71,9 @@
       border-radius: 0;
       border-bottom: 2px dotted #000;
       font-size: 14px;
+      font-weight: bold;
+      display: inline;
+      margin-right: 5px;
     }
     .end{
       display: flex;
