--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
       font-weight: bold;
       display: inline-block;
     }
-    .form input{
+    .form input, .form textarea{
       outline: none;
       border-top: none;
       border-left: none;
@@ -102,7 +102,7 @@
       <p>This form confirms that the grant release application submitted by the grantee below has been officially approved.</p>
       <div class="form">
         <label>Grantee's Name:</label>
-        <input type="text" class="Input">
+        <textarea type="text" class="Input"></textarea>
         
         <label>Grantee's Date of Birth:</label>
         <input type="text" class="Input">
