--- a/form.html
+++ b/form.html
@@ -102,7 +102,7 @@
       <p>This form confirms that the grant release application submitted by the grantee below has been officially approved.</p>
       <div class="form">
         <label>Grantee's Name:</label>
-        <textarea type="text" class="Input"></textarea>
+        <input type="text" class="Input">
         
         <label>Grantee's Date of Birth:</label>
         <input type="text" class="Input">
