--- a/form.html
+++ b/form.html
@@ -61,6 +61,7 @@
       font-size: 14px;
       margin: 5px;
       font-weight: bold;
+      display: inline-block;
     }
     .form input, .form textarea{
       outline: none;
