--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
     .container{
       text-align: center;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-      height: 80vh;
+      /*height: 80vh;*/
       padding: 30px 20px 10px;
       background-color: #fff;
     }
