--- a/form.html
+++ b/form.html
@@ -18,6 +18,7 @@
       /*height: 80vh;*/
       padding: 30px 20px 10px;
       background-color: #fff;
+      position: relative;
     }
     .head{
       display: flex;
@@ -77,7 +78,8 @@
     }
     .end{
       display: flex;
-      position: relative;
+      position: absolute;
+      bottom: 0;
     }
     .end img{
       width: 70px;
