--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
       width: 80px;
       position: absolute;
       right: 0px;
-      top: -15px;
+      top: -50%;
     }
     .body{
       margin: 90px 0px 20px;
