--- a/form.html
+++ b/form.html
@@ -78,15 +78,19 @@
     }
     .end{
       display: flex;
+      margin-top: 10px;
       position: absolute;
       bottom: 0;
     }
     .end img{
       width: 70px;
       height: 70px;
+      right: 50%;
     }
     .end h4{
       font-family: 'Alex Brush', cursive;
+      text-decoration: underline;
+      right: 100%;
     }
   </style>
 </head>
