--- a/form.html
+++ b/form.html
@@ -44,6 +44,7 @@
       width: 80px;
       position: absolute;
       right: 0px;
+      border: 1px solid #000;
       top: -50%;
     }
     .body{
