--- a/form.html
+++ b/form.html
@@ -86,12 +86,13 @@
     .end img{
       width: 70px;
       height: 70px;
+      position: absolute;
       right: 50%;
     }
     .end h4{
       font-family: 'Alex Brush', cursive;
       text-decoration: underline;
-      right: 100%;
+      right: 20px;
     }
   </style>
 </head>
