--- a/form.html
+++ b/form.html
@@ -86,7 +86,7 @@
     .end img{
       width: 70px;
       height: 70px;
-      position: absolute;
+      position: relative;
       right: 50%;
     }
     .end h4{
