--- a/form.html
+++ b/form.html
@@ -39,16 +39,15 @@
     }
     .nav{
       position: relative;
-      border: 1px solid #000;
     }
     .nav img{
       width: 80px;
       position: absolute;
       right: -5px;
-      top: -40%;
+      top: -35%;
     }
     .body{
-      margin: 90px 0px 20px;
+      margin: 70px 0px 20px;
       padding: 10px;
       text-align: left;
     }
@@ -90,6 +89,7 @@
     .end h4{
       font-family: 'Alex Brush', cursive;
       text-decoration: underline;
+      position: relative;
       right: 0px;
     }
   </style>
