--- a/form.html
+++ b/form.html
@@ -81,6 +81,7 @@
       margin-top: 10px;
       position: absolute;
       bottom: 0;
+      border: 1px solid black;
     }
     .end img{
       width: 70px;
