--- a/form.html
+++ b/form.html
@@ -82,6 +82,7 @@
       position: absolute;
       bottom: 0;
       border: 1px solid black;
+      width: 100%;
     }
     .end img{
       width: 70px;
