--- a/form.html
+++ b/form.html
@@ -82,11 +82,14 @@
       position: absolute;
       bottom: 0;
       border: 1px solid black;
+      box-sizing: border-box;
       width: 100%;
     }
     .end img{
       width: 70px;
       height: 70px;
+      position: relative;
+      right: 50%;
     }
     .end h4{
       font-family: 'Alex Brush', cursive;
