--- a/form.html
+++ b/form.html
@@ -89,13 +89,12 @@
       width: 70px;
       height: 70px;
       position: relative;
-      right: 50%;
     }
     .end h4{
       font-family: 'Alex Brush', cursive;
       text-decoration: underline;
       position: relative;
-      right: 0px;
+      right: 0;
     }
   </style>
 </head>
