--- a/form.html
+++ b/form.html
@@ -82,8 +82,7 @@
       position: absolute;
       bottom: 0;
       border: 1px solid black;
-      box-sizing: border-box;
-      width: 100%;
+      justify-content: center;
     }
     .end img{
       width: 70px;
