--- a/form.html
+++ b/form.html
@@ -36,6 +36,7 @@
       text-align: center;
       width: 75%;
       margin: auto;
+      color: #008000;
     }
     .nav{
       position: relative;
