--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@
     }
     .end{
       display: flex;
-      margin: 10px;
+      margin: 10px auto;
       position: absolute;
       bottom: 0;
       border: 1px solid black;
