--- a/form.html
+++ b/form.html
@@ -82,6 +82,7 @@
       margin: 10px auto;
       position: absolute;
       bottom: 0;
+      right: 0;
       border: 1px solid black;
       justify-content: center;
     }
