--- a/form.html
+++ b/form.html
@@ -106,7 +106,7 @@
       <h3 class="title">FEDERAL GOVERNMENT OF NIGERIA GRANT</h3>
     </div>
     <div class="nav">
-      <h4>GRANT APPROVED</h4>
+      <h4>GRANT APPROVAL</h4>
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
@@ -137,7 +137,7 @@
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
-      <h4>Alexb</h4>
+      <h4>Adedeji</h4>
     </div>
   </div>
 </body>
