--- a/form.html
+++ b/form.html
@@ -82,14 +82,14 @@
       margin: 10px auto;
       position: absolute;
       bottom: 0;
-      right: 0;
+      right: 10%;
       border: 1px solid black;
+      width: 70%;
       justify-content: center;
     }
     .end img{
       width: 70px;
       height: 70px;
-      position: relative;
     }
     .end h4{
       font-family: 'Alex Brush', cursive;
