--- a/form.html
+++ b/form.html
@@ -94,7 +94,8 @@
     .end h4{
       font-family: 'Alex Brush', cursive;
       text-decoration: underline;
-      right: 0;
+      position: relative;
+      right: 5px;
     }
   </style>
 </head>
