--- a/form.html
+++ b/form.html
@@ -93,9 +93,14 @@
     }
     .end h4{
       font-family: 'Alex Brush', cursive;
+      font-size: 20px;
       text-decoration: underline;
       position: relative;
-      right: 5px;
+      left: 50px;
+      bottom: 20px;
+    }
+    .end h5{
+      border-top: 1px solid #000;
     }
   </style>
 </head>
