--- a/form.html
+++ b/form.html
@@ -86,6 +86,7 @@
       border: 1px solid black;
       width: 70%;
       justify-content: center;
+      padding-right: 10px;
     }
     .end img{
       width: 70px;
@@ -97,10 +98,10 @@
       text-decoration: underline;
       position: relative;
       left: 50px;
-      bottom: 20px;
+      bottom: 25px;
     }
     .end h5{
-      border-top: 1px solid #000;
+      border-top: 3px solid #000;
     }
   </style>
 </head>
