--- a/form.html
+++ b/form.html
@@ -85,7 +85,7 @@
       right: 10%;
       border: 1px solid black;
       width: 70%;
-      justify-content: center;
+      padding-left: 5px;
     }
     .end img{
       width: 70px;
