--- a/form.html
+++ b/form.html
@@ -142,8 +142,8 @@
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
-      <h4>Adedeji</h4>
-      <h5>Ministry of Humanitarian Affairs</h5>
+      <h4>Yilwatda</h4>
+      <h5>Minister for Humanitarian Affairs</h5>
     </div>
   </div>
 </body>
