--- a/form.html
+++ b/form.html
@@ -45,7 +45,7 @@
       width: 80px;
       position: absolute;
       right: -2px;
-      top: -60%;
+      top: -30px;
     }
     .body{
       margin: 70px 0px 70px;
