--- a/form.html
+++ b/form.html
@@ -114,7 +114,7 @@
       <img src="selfie.jpeg" alt="gov">
     </div>
     <div class="body">
-      <p>This form confirms that the grant release application, being previously submitted by the grantee below has been approved.</p>
+      <p>This form confirms that the grant release application previously submitted by the grantee below has been approved.</p>
       <div class="form">
         <label>Grantee's Name:</label>
         <input type="text" class="Input" placeholder="Name">
