--- a/form.html
+++ b/form.html
@@ -41,6 +41,9 @@
     .nav{
       position: relative;
     }
+    .nav h4{
+      color: #badfff;
+    }
     .nav img{
       width: 80px;
       position: absolute;
