--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
       position: relative;
     }
     .nav h4{
-      color: #badfff;
+      color: #f5f2f6;
     }
     .nav img{
       width: 80px;
